callme-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callme-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callme-app
      version: v1
  template:
    metadata:
      labels:
        app: callme-app
        version: v1
    spec:
      containers:
        - name: callme-app
          image: svbugakov/kuber:istio_callme
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callme-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callme-app
      version: v2
  template:
    metadata:
      labels:
        app: callme-app
        version: v2
    spec:
      containers:
        - name: callme-app
          image: svbugakov/kuber:istio_callme
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: callme-service
  labels:
    app: callme-app
spec:
  type: ClusterIP
  ports:
  - port: 8081
    targetPort: 8080
    name: http
  selector:
    app: callme-app
